Fixing bugs...
* DONE - Horizontal line color not working - REMOVED
* DONE - Button color not working
* DONE - Button text color not working
* DONE - Typography: Heading color not saving but live previewing works
* DONE - Typography: Text color not saving but live previewing works
* DONE - Layout: Boxed layout color and padding not working
* DONE - All image select options styling messed up ( page layout /
post layout / Archive layout ), options * work.
* DONE - Footer: Background color not saving
* DONE - Footer: Heading color not saving
* DONE - Footer: Text color not saving
* DONE - Footer: Link color not saving

--- a/editor-style.css
+++ b/editor-style.css
@@ -1735,25 +1735,6 @@ fieldset legend {
 	margin-bottom: 1.618em;
 }
 
-.hentry .entry-header {
-	margin-bottom: 3.631em;
-}
-
-.hentry .entry-header h1 {
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-	padding-bottom: .618em;
-	margin-bottom: 3px;
-}
-
-.eighteen-tags-pro-active .post-meta-container {
-	font-size: 0.857em;
-	margin-bottom: 1em;
-}
-
-.entry-date.published + .updated {
-	display: none;
-}
-
 .post-meta:after {
 	content: ' | ';
 }
