--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1724,7 +1724,6 @@ fieldset legend {
 }
 
 .hentry .entry-header h1 {
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 	padding-bottom: .618em;
 	margin-bottom: 3px;
 }
